tests/ui/compile-fail/init/wrong_generics.stderr
error: comparison operators cannot be chained
 --> tests/ui/compile-fail/init/wrong_generics.rs:7:22
  |
7 |     let _ = init!(Foo<()> {
  |                      ^  ^
  |
help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
  |
7 |     let _ = init!(Foo::<()> {
  |                      ++

error: comparison operators cannot be chained
 --> tests/ui/compile-fail/init/wrong_generics.rs:7:22
  |
7 |     let _ = init!(Foo<()> {
  |                      ^  ^
  |
  = help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
  = help: or use `(...)` if you meant to specify fn arguments
